i2s3 full-duplex to i2s3 & 2 half duplex

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = ststm32
 board = genericSTM32F411CE
 framework = stm32cube
 debug_tool = stlink
+upload_protocol = stlink
+upload_port = stlink
 
 build_unflags =
     -lnosys
