arm cfft, audio sample float->uint32_t

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,10 +22,16 @@ build_unflags =
 
 build_flags = 
     -Wl,-u,_printf_float
+    -larm_cortexM4l_math
+    -D ARM_MATH_CM4
+    -Ofast
+
+debug_build_flags = 
     -D DEBUG
 
 extra_scripts =
     enable_semihosting.py
+    include_cmsis.py
 
 debug_extra_cmds =
     monitor arm semihosting enable
