--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,10 @@ build_unflags =
     --specs=nosys.specs
 
 build_flags = 
-    -larm_cortexM4l_math
+    -mfloat-abi=hard
+    -mfpu=fpv4-sp-d16
+    -larm_cortexM4lf_math
+    -D __FPU_PRESENT=1
     -D ARM_MATH_CM4
     -Ofast
 
@@ -32,6 +35,7 @@ debug_build_flags =
 extra_scripts =
     enable_semihosting.py
     include_cmsis.py
+    include_float.py
 
 debug_extra_cmds =
     monitor arm semihosting enable
